--- a/views/listagem-suricatos.html
+++ b/views/listagem-suricatos.html
@@ -43,4 +43,18 @@
     </div>
     <button ng-show="iniciado" ng-click="finalizar()" class="btn btn-danger"> Finalizar </button>
     <button ng-show="!iniciado" ng-click="iniciar()" class="btn btn-success"> Iniciar </button>
+    <br><br>
+    <button ng-click="exibeCadastro()" class="btn btn-primary">
+        <span ng-hide="cadastrar">Cadastrar</span>
+        <span ng-show="cadastrar">Ocultar</span>
+    </button>
+    <br><br>
+    <div class="panel panel-primary" ng-if="cadastrar">
+        <div class="panel-heading">
+            <h3 class="panel-title">Novo Cadastro</h3>
+        </div>
+        <div class="panel-body">
+            <cadastro-suricato></cadastro-suricato>
+        </div>
+    </div>
 </div>
