--- a/views/inicial.html
+++ b/views/inicial.html
@@ -1,3 +1,10 @@
+<!--
+Nome do autor: Fabio Augusto Amaro Jaime
+Data de criacao do arquivo: 26/03/2019
+Objetivo sucinto do programa: Simular uma adocao de suricatos usando html, angular e bootstrap
+Referencia ao enunciado/origem do exercicio: https://cursos.timtec.com.br/course/desenvolvimento-web-com-angularjs/intro 
+-->
+
 <html>
 
 <head>
@@ -9,9 +16,11 @@
 
 <body>
     <div class="well">
-        <h3>Página inicial da Aplicação</h3>
-        <h2>Seja bem vindo!</h2>
-        <h2>Para mais informações acesse outras páginas da aplicação!</h2>
+        <center>
+            <h2>Olá, seja bem vindo!</h3>
+                <h4>Nossa aplicação tem o intuito de ajudar suricatos sem lar a encontrar uma família.</h4>
+                <img src="img/suricatin.jpg" height="300" width="500">
+        </center>
     </div>
 </body>
 
